--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,8 @@ NOTE: TP de trois slots de 1h20
 ## Nom du(des) étudiant(e)(s) de ce monôme/binôme 
 WARNING: NE PAS OUBLIER DE MENTIONNER LES DEUX NOMS SI VOUS ETES EN BINOME!
 
-#XXX# (et #YYY#)
+Ange-Pavel ISHIMWE
+Matthias MEUNIER
 
 Commentaires éventuels des étudiants : #XXXXXX#
 
@@ -39,9 +40,15 @@ TIP: [Rappel Git] Trois dépôts sont ici utilisés: le dépot Github de l'ensei
 
 *Le code est-il structuré en couches ? Quel problèmes ce code peut-il poser ?*
 
+*Le codes fournit n'est pas strucutré en couches, puisque toutes les classes sont dans un seul et même package. Ce type de code peut poser des problemes pour la lisibilité du code par les nouveaux arrivant dans le projet. De plus, le maintien, l'evolution et les tests de l'application sont très compliqués.*
+
 *Où se trouve le code métier (voir la règle de gestion RG 1) ?*
 
+*Le code métier ce trouve dans le controlleur ("TodoListController")*
+
 *Cette règle est-elle facilement testable par un test unitaire ?*
+
+*Non la méthode est privée ce qui rend les tests difficiles. De plus, la methode est dans un controlleur, il faudra donc MOCKER le controlleur juste pour tester le code métier*
 
 * Lancer une base PostgreSQL en Docker dans un terminal (on lance ici la base en mode interactif pour visualiser son activité. Pour la lancer en tâche de fond, remplacer les options `it` par `d` comme 'daemon'):
 ```bash
@@ -49,9 +56,17 @@ docker run -it -e POSTGRES_PASSWORD=password -p 5432:5432 postgres
 ```
 *Expliquer cette ligne de commande (y compris les options utilisées)*
 
+*Cette ligne de commande lance DOCKER. Le parametre "-it" permet d'interagir avec le conteneur, "-e" permet de créer une variables d'environnement, "POSTGRES_PASSWORD" permet de renseigner le mot de passe de la base PostGres, "-p" permet d'utiliser un port precis dans le cas present le port est "5432", *
+
 * Compléter le code manquant dans la méthode `TodoListController.createTodoItem()`
 
 *Pourquoi `todoItemRepository` est-il `null` ? Quelle est la meilleure façon de l'injecter ?*
+
+* `todoItemRepository` est nul parce que il n'est pas injecté dans le controlleur, pour ce il faut donc pouvoir l'injecter à l'aide des annotations spring *
+*Il existe 3 méthodes pour injecter une dépendance dans un objet java : via le constructeur, les setteurs et dans la déclarations des attributs.
+
+Mais la meilleur façon est via le constructeur four faciliter la testabilité et ne pas rendre l'objet injecté modifiable .
+*
 
 * Modifier le code en conséquence.
 
@@ -119,5 +134,4 @@ _Temps estimé : 20 mins_
 - Pour tester l'adapter REST, utiliser l'annotation `@WebMvcTest(controllers = TodoListController.class)`
 - Voir cette https://spring.io/guides/gs/testing-web/[documentation]
 =====
-
 
