--- a/README.adoc
+++ b/README.adoc
@@ -131,8 +131,11 @@ _Temps estimé : 20 mins_
 * Implémenter (en junit) des TU sur la règle de gestion qui consiste à afficher `[LATE!]` dans la description d'un item en retard de plus de 24h.
 
 *Quels types de tests devra-t-on écrire pour les adapteurs ?* 
+On devra des test d'intégrations 
 
 *Que teste-on dans ce cas ?*
+
+On teste si les différents composant communiquent entre eux contrairement au tests unitaires qui testent chaque composant à part. Nous testons donc la persistence des données et le controleur (API).
 
 *S'il vous reste du temps, écrire quelques uns de ces types de test.*
 
